--- a/credentialsDontPost/.env
+++ b/credentialsDontPost/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://final:final1@cluster0.9edil04.mongodb.net/?appName=Cluster0
+MONGO_CONNECTION_STRING = mongodb+srv://final:final1@cluster0.9edil04.mongodb.net/?appName=Cluster0
